# Paranoia

./: .dockerignore  .gitignore  ADR-A1c-MultiDevice.md  EXPORT_COMPLIANCE.md  ExportKeyring.md  LICENSE  LocalStorageEncryptionPolicy.md  MessageDeliveryStatusPolicy.md  MultiDevice.md  MultiDevicePolicy.md  NotificationsPolicy.md  Plan.md  README.md  README.ru.md  Readme.md  ReserveServerUrlPolicy.md  UsernamePrivacyPolicy.md  VoipPolicy.md  build_android.sh  dump_sources.sh  paranoia_notifications_policy.md  paranoia_voip_policy.md  reserve_server_path.md  username_privacy_plan.md  vcpkg.json  Требования.md
ParanoiaClient/: Cargo.toml  build.rs  forms.md
ParanoiaClient/src/: main.rs
ParanoiaClient/src/app/: mod.rs  window_manager.rs
ParanoiaClient/src/ui/: connect.slint  dialogue.slint  header.slint  hello.slint  install_server.slint  login.slint  main.slint  main_tabs.slint  register.slint
ParanoiaCover/: Cargo.toml
ParanoiaCover/src/: core.rs  engine.rs  lib.rs  profile.rs  schema_gen.rs  signed.rs  validate.rs
ParanoiaEasyCli/: .gitignore  Cargo.toml  README.md
ParanoiaEasyCli/src/: dialogue_store.rs  main.rs  mcp_install.rs  mcp_server.rs  tui.rs  ui_store.rs
ParanoiaEasyCli/tools/: README.md  install_mcp.sh  paranoia_mcp.py
ParanoiaLibrary/: CMakeCache.txt  Cargo.toml
ParanoiaLibrary/examples/: admin_smoke.rs  corp_smoke.rs
ParanoiaLibrary/include/: ParanoiaFFI  paranoia_lib.h
ParanoiaLibrary/src/: admin.rs  admin_api.rs  client_cover.rs  client_cover_food.rs  client_cover_schema.rs  corp.rs  corp_api.rs  crypto.rs  dialogue.rs  error_classify.rs  export.rs  ffi.rs  lib.rs  masking.rs  packet.rs  qr_exchange.rs  store.rs  transport.rs  types.rs  voip_ffi.rs
ParanoiaLibrary/src/local_vault/: crypto.rs  io.rs  mod.rs  pkcs11.rs  state.rs  vault.rs
ParanoiaLibrary/src/voip/: crypto.rs  jitter.rs  mod.rs  nal.rs  packet.rs  signaling.rs  stun.rs  transport.rs  turn.rs
ParanoiaLibrary/tests/: ffi_ecies_export.rs  ffi_errors.rs  ffi_qr_exchange.rs  ffi_voip.rs  local_vault_flow.rs  two_clients.rs
ParanoiaServer/: Cargo.toml
ParanoiaServer/src/: call_signal.rs  config.rs  cover.rs  crypto.rs  dialogue_notify.rs  food_delivery_cover.rs  main.rs  metrics.rs  nginx.rs  schema_cover.rs  store.rs  voip_stun.rs
ParanoiaServer/src/routes/: arrived.rs  blob.rs  call_poll.rs  call_signal.rs  cover_gateway.rs  determinate.rs  map.rs  metrics.rs  mod.rs  notify.rs  pull.rs  push.rs  reg.rs
ParanoiaUiClient/: .gitignore  .qmlls.ini  CMakeLists.txt  CMakePresets.json  run.sh
ParanoiaUiClient/android/: AndroidManifest.xml
ParanoiaUiClient/android/jni/: paranoia_service_jni.c
ParanoiaUiClient/apple/en.lproj/: InfoPlist.strings  Localizable.strings
ParanoiaUiClient/apple/ru.lproj/: InfoPlist.strings  Localizable.strings
ParanoiaUiClient/i18n/: Paranoia_en.ts
ParanoiaUiClient/ios/: Info.plist.in
ParanoiaUiClient/ios/ShareExtension/: Info.plist.in  Paranoia.entitlements  ShareViewController.h  ShareViewController.mm
ParanoiaUiClient/macos/: Info.plist.in
ParanoiaUiClient/resources/design/: design.qrc
ParanoiaUiClient/resources/dictionaries/: dictionaries.qrc  ru_RU.dic
ParanoiaUiClient/resources/install_scripts/: ConfigureNginx.sh  CreateConfig.sh  DownloadServer.sh  GetCert.sh  InstallNginx.sh  StartServer.sh  SystemdService.sh  script.qrc
ParanoiaUiClient/resources/linux/: app.paranoia.client.desktop  qt.conf
ParanoiaUiClient/resources/windows/: paranoia.rc.in
ParanoiaUiClient/src/: ClientBackend.cpp  ClientBackend.h  ClientBackend.hpp  ClientSSH.cpp  ClientSSH.hpp  InstallServerBackend.cpp  InstallServerBackend.h  InstallServerBackend.hpp  PlatformNotifications.cpp  PlatformNotifications.hpp  PlatformNotifications_ios.mm  QrCodeUtils.cpp  QrCodeUtils.hpp  Utils.cpp  Utils.hpp  adminStorage.cpp  adminStorage.hpp  main.cpp
ParanoiaUiClient/src/backend/: ActiveChatNotifier.cpp  ActiveChatNotifier.hpp  ChatBackend.cpp  ChatBackend.hpp  EmojiImageProvider.cpp  EmojiImageProvider.hpp  EncryptedImageProvider.hpp  InstallServerBackend.cpp  InstallServerBackend.hpp  MainBackend.cpp  MainBackend.hpp  NativeFileDialog.cpp  NativeFileDialog.hpp  NotificationCoordinator.cpp  NotificationCoordinator.hpp  VersionInfoBackend.cpp  VersionInfoBackend.hpp
ParanoiaUiClient/src/platform/: DesktopTray.cpp  DesktopTray.hpp  IosFileExport.hpp  IosFileExport.mm  IosImagePicker.mm  IosOrientationLock.mm  LinuxNotifier.cpp  LinuxNotifier.hpp  OrientationLock.cpp  OrientationLock.hpp  PlatformNotifications.cpp  PlatformNotifications.hpp  PlatformNotifications_ios.mm  PlatformNotifications_macos.mm  ShareTarget_ios.mm
ParanoiaUiClient/src/session/: Dialog.cpp  Dialog.hpp  ServerSession.cpp  ServerSession.hpp  SessionStore.cpp  SessionStore.hpp
ParanoiaUiClient/src/spell/: SpellChecker.cpp  SpellChecker.hpp  SpellHighlighter.cpp  SpellHighlighter.hpp
ParanoiaUiClient/src/utils/: ClientSSH.cpp  ClipboardUtils.cpp  ClipboardUtils.hpp  KeyInjector.cpp  KeyInjector.hpp  Logging.cpp  Logging.hpp  Paths.cpp  Paths.hpp  QrCameraScanner.cpp  QrCameraScanner.hpp  QrCodeUtils.cpp  QrCodeUtils.hpp  Utils.cpp  Utils.hpp  adminStorage.cpp  adminStorage.hpp
ParanoiaUiClient/src/voip/: AudioCapture.cpp  AudioCapture.hpp  AudioPlayback.cpp  AudioPlayback.hpp  CallController.cpp  CallController.hpp  CallEngine.cpp  CallEngine.hpp  CallSignalingClient.cpp  CallSignalingClient.hpp  H264Codec.cpp  H264Codec.hpp  IosAudioSession.hpp  IosAudioSession.mm  NetUtil.cpp  NetUtil.hpp  OpusCodec.cpp  OpusCodec.hpp  VideoCapture.cpp  VideoCapture.hpp  VideoSink.cpp  VideoSink.hpp  VideoTranscoder.cpp  VideoTranscoder.hpp  VoipSystem.cpp  VoipSystem.hpp
ParanoiaUiClient/ui/: Main.qml  Reactions.qml  Theme.qml
ParanoiaUiClient/ui/Components/: AppIcon.qml  AppScrollBar.qml  CallButton.qml  CallPathIndicator.qml  CenteredPane.qml  CheckMark.qml  CopyablePublicKeyBlock.qml  DeliveryStatusIcon.qml  EditKeyToolbar.qml  EmojiPanel.qml  EmojiPicker.qml  ImportProfilePanel.qml  MessageText.qml  ParaButton.qml  ParaFileDialog.qml  ParaHeader.qml  ParaInput.qml  PhotoMosaic.qml  (+14 more)
(+93 files in other folders)
