[package]
name = "paranoia-client"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1"
slint = "1.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
once_cell = "1"

rpassword = "7"
sha2 = "0.10"
chacha20poly1305 = "0.10"
rand = { version = "0.10", features = ["thread_rng"] }
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }

[build-dependencies]
slint-build = "1.8"

paranoia-lib = { path = "../ParanoiaLibrary" }
