[package]
name = "paranoia-easy-cli"
version = "0.2.19"
edition = "2024"

[dependencies]
paranoia-lib = { path = "../ParanoiaLibrary" }

anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rpassword = "7.5.2"
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = "2.2.0"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
rand = "0.8"
# TUI (интерактивный консольный мессенджер, сабкоманда `tui`). crossterm берём
# через re-export `ratatui::crossterm`, чтобы не словить рассинхрон версий.
ratatui = "0.29"
# Метки даты в ленте TUI (Local::now, Duration). Версия как в paranoia-lib.
chrono = "0.4"
