[package]
name = "paranoia-lib"
version = "1.0.0"
edition = "2024"

[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"
codegen-units = 1

[lib]
name = "paranoia_lib"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.0", features = ["json", "rustls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.10"
rand_core = "0.10.0"
sha2 = "0.10"
hkdf = "0.12"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hex = "0.4"
base64 = "0.22"
rusqlite = { version = "0.38.0", features = ["bundled"] }
anyhow = "1"
thiserror = "2.0.18"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
mime = "0.3"
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3"
