[package]
name = "paranoia-lib"
version = "0.2.9"
edition = "2024"

[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"
codegen-units = 1

[lib]
name = "paranoia_lib"
path = "src/lib.rs"
# UI clients link the static archive; keeping crate types static avoids iOS cdylib builds.
crate-type = ["rlib", "staticlib"]

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
socket2 = "0.5"
reqwest = { version = "0.13.3", features = ["json", "rustls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chacha20poly1305 = "0.10.1"
zeroize = { version = "1", features = ["derive"] }
ed25519-dalek = "2.2.0"
hmac = "0.12"
sha1 = "0.10"
md-5 = "0.10"
rand = "0.8"
sha2 = "0.10" # Дубль из-за зависимостей ed25519-dalek
hkdf = "0.12" # Дубль из-за зависимостей ed25519-dalek
x25519-dalek = { version = "2", features = ["static_secrets"] }
hex = "0.4"
base64 = "0.22"
rusqlite = { version = "0.39.0", features = ["bundled-sqlcipher"] }
argon2 = "0.5"
libc = "0.2"
anyhow = "1"
tracing = "0.1"
# Keep on getrandom 0.2 to match rand_core 0.6 used by crypto crates.
uuid = { version = ">=1.12.1, <1.13", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "android")'.dependencies]
rusqlite = { version = "0.39.0", features = ["bundled-sqlcipher-vendored-openssl"] }
jni = { version = "0.22.4", default-features = false }
# Must stay >= 0.7.0 so that reqwest's transitive `rustls-platform-verifier`
# resolves to the same version we initialize via `paranoia_android_init`.
# If a 0.6.x copy sneaks back into Cargo.lock, every TLS handshake panics
# with "Expect rustls-platform-verifier to be initialized" (silently — the
# panic is swallowed by `panic::catch_unwind` in FFI and surfaces only as
# `notify_panic` / `send_panic` in `paranoia_last_error()`).
# Recovery: `cargo update -p rustls-platform-verifier@0.6 --precise 0.7.0`.
rustls-platform-verifier = "0.7.0"

[dev-dependencies]
# tempfile 3.16+ moves to getrandom 0.3/0.4 and reintroduces duplicate RNG stacks.
tempfile = ">=3.15, <3.16"
