[package]
name = "paranoia"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "paranoia"
path = "src/main.rs"

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1

[features]
default = ["metrics"]        # можно включать по умолчанию
metrics = []                 # пустой маркерный флаг

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.8", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rocksdb = "0.24"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
prometheus = { version = "0.14", features = ["process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }
