[package]
name = "paranoia"
version = "0.2.6"
edition = "2024"

[[bin]]
name = "paranoia"
path = "src/main.rs"

[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"
codegen-units = 1

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
axum = { version = "0.8.9", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rocksdb = "0.24"
ed25519-dalek = "2"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
anyhow = "1"
